# lowi

./: CMakeLists.txt  README.md
include/lowi/: architecture.hh  architectures.hh  file.hh  instruction.hh  instruction_type.hh  instructions.hh  lowi.hh  operand.hh  register_map.hh  register_type.hh  registers.hh  script.hh  token.hh
include/lowi/architectures/: x86_64.hh
include/lowi/instructions/: mov.hh  nop.hh
include/lowi/registers/: ah.hh  al.hh  ax.hh  bh.hh  bl.hh  bp.hh  bx.hh  ch.hh  cl.hh  cs.hh  cx.hh  dh.hh  di.hh  dl.hh  ds.hh  dx.hh  eax.hh  ebp.hh  ebx.hh  ecx.hh  edi.cc  edi.hh  edx.hh  eflags.hh  es.hh  esi.hh  esp.cc  esp.hh  flags.hh  fs.hh  gs.hh  r10.hh  r10d.hh  r10l.hh  r10w.hh  r11.hh  r11d.hh  r11l.hh  r11w.hh  r12.hh  (+38 more)
src/lowi/: CMakeLists.txt  architecture.cc  file.cc  instruction.cc  instruction_type.cc  register_map.cc  register_type.cc  script.cc  test.cc  token.cc
src/lowi/architectures/: x86_64.cc
src/lowi/instructions/: mov.cc  nop.cc
src/lowi/registers/: 1B.cc  2B.cc  4B.cc  8B.cc  ah.cc  al.cc  ax.cc  bh.cc  bl.cc  bp.cc  bx.cc  ch.cc  cl.cc  cx.cc  dh.cc  di.cc  dl.cc  dx.cc  eax.cc  ebp.cc  ebx.cc  ecx.cc  edx.cc  esi.cc  r10.cc  r10d.cc  r10l.cc  r10w.cc  r11.cc  r11d.cc  r11l.cc  r11w.cc  r12.cc  r12d.cc  r12l.cc  r12w.cc  r13.cc  r13d.cc  r13l.cc  r13w.cc  (+22 more)
translation/english/: README.md
